force-app/main/default/objects/Case/fields/BillableHours__c.field-meta.xml
<CustomField>
    <fullName>BillableHours__c</fullName>
    <description>Total hours from time entries (from object Time Entry) to each case</description>
    <label>Billable Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>