force-app/main/default/objects/Case/fields/Clockify_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Clockify_Task_Id__c</fullName>
    <description>Clockify Task Id</description>
    <externalId>true</externalId>
    <label>Clockify Task Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>