force-app/main/default/objects/Case/fields/EntitlementMonthlyHours__c.field-meta.xml
<CustomField>
    <fullName>EntitlementMonthlyHours__c</fullName>
    <formula>Entitlement.MonthlyHoursPerEntitlement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitlement Monthly Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>