force-app/main/default/objects/Case/fields/EntitlementRemainingMonthlyHours__c.field-meta.xml
<CustomField>
    <fullName>EntitlementRemainingMonthlyHours__c</fullName>
    <description>Entitlement Remaining Monthly Hours</description>
    <formula>Entitlement.RemainingMonthlyHours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitlement Remaining Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>