force-app/main/default/objects/Case/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>Reason for case resolution</description>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bug Fixed - Delivery</fullName>
            </value>
            <value>
                <fullName>Bug Fixed - Salesforce</fullName>
            </value>
            <value>
                <fullName>Bug Fixed - Support</fullName>
            </value>
            <value>
                <fullName>Client Informed/Trained</fullName>
            </value>
            <value>
                <fullName>Client Unavaliable</fullName>
            </value>
            <value>
                <fullName>External - Client Error</fullName>
            </value>
            <value>
                <fullName>External - Third Party Error</fullName>
            </value>
            <value>
                <fullName>Feature UpdatedCreated Delivery</fullName>
                <label>Feature Updated/Created - Delivery</label>
            </value>
            <value>
                <fullName>Feature UpdatedCreated Support</fullName>
                <label>Feature Updated/Created - Support</label>
            </value>
            <value>
                <fullName>Problem Created</fullName>
            </value>
            <value>
                <fullName>Question Solved - Delivery</fullName>
            </value>
            <value>
                <fullName>Question Solved - Support</fullName>
            </value>
            <value>
                <fullName>Redirected to Sales Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>