force-app/main/default/objects/Case/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Incident severity in order to classify the</description>
    <inlineHelpText>1 - Critical - Entire system or business process is unusable or does not meet the needs of the business, many users affected and no workaround is available.

2 - High - Part of the system or key business process is unusable or does not meet the needs of the business, few users affected and/or a workaround is available.

3 - Medium - A non-critical incident occurs typically affecting few users. The incident affects the ability to provide the best service but there is a workaround.</inlineHelpText>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Critical</fullName>
            </value>
            <value>
                <fullName>2 - High</fullName>
            </value>
            <value>
                <fullName>3 - Medium</fullName>
            </value>
            <value>
                <fullName>4 - Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>