force-app/main/default/objects/Case/recordTypes/Requests.recordType-meta.xml
<RecordType>
    <fullName>Requests</fullName>
    <active>true</active>
    <businessProcess>Requests</businessProcess>
    <description>Non urgent requests from a customer for something to be provided</description>
    <label>Requests</label>
</RecordType>