force-app/main/default/objects/Case/listViews/Victorino_Cases.listView-meta.xml
<ListView>
    <fullName>Victorino_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>TR_Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Victorino Gomes</value>
    </filters>
    <label>Victorino Cases</label>
</ListView>